# marmot-nids

./: .banditrc  .dockerignore  .env.example  .gitignore  DEVELOPMENT.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
contracts/: AlertRegistry.sol
core/: __init__.py
core/api/: __init__.py  app.py
core/api/routes/: __init__.py  alerts.py  health.py  status.py  ws.py
core/blockchain/: __init__.py  ethereum.py  factory.py  null_provider.py  provider.py  sync.py
core/capture/: __init__.py  dos_tracker.py  flow_assembler.py  flow_stats.py  sniffer.py
core/detection/: __init__.py  base.py
core/detection/llm/: __init__.py  engine.py  parser.py  prompt_builder.py
core/detection/llm/rag/: __init__.py  ingestor.py  retriever.py
core/detection/llm/rag/knowledge/: 01_dos_ddos_patterns.md  02_port_scanning.md  03_brute_force.md  04_web_attacks.md  05_dns_attacks.md  06_lateral_movement.md  07_normal_baselines.md  08_mitre_attack.md
core/detection/signature/: __init__.py  engine.py  manager.py  schema.py
dashboard/: index.html
docs/: threat-model.md
docs/adr/: 001-pluggable-blockchain.md  002-local-llm-ollama.md  003-fastapi-over-flask.md
scripts/: ingest_knowledge.py  sign_signatures.py
signatures/: signatures.json  signatures.json.hmac
tests/: __init__.py
tests/fixtures/: sample_flows.json
tests/unit/: __init__.py  test_api.py  test_blockchain.py  test_flow_assembler.py  test_llm_engine.py  test_signature_engine.py  test_websocket.py
